# chinese-vibe-coding-ime

./: .gitignore  README.md  pyproject.toml
legacy/: init.lua
legacy/linux/: README.md  vibe-coding-ime.py
legacy/windows/: README.md  vibe-coding-ime.ahk
linux/: vibe-coding-ime.service
unified/: README.md  vibe-coding-ime.py
vibe_coding_ime/: __init__.py
